--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
   console.log('Supabase READY');
 
   // 🚀 SAU KHI SUPABASE READY → LOAD APP
+  const scriptTasks = document.createElement('script');
+  script.src = 'Tasks.js';
+  document.body.appendChild(scriptTasks);
   const script = document.createElement('script');
-  script.src = 'app.js';
+  script.src = 'appp.js';
   document.body.appendChild(script);
 </script>
 
