--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   // 🚀 SAU KHI SUPABASE READY → LOAD APP
 
   const script = document.createElement('script');
-  script.src = 'appp.js';
+  script.src = 'app.js';
   document.body.appendChild(script);
 </script>
 
