--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   // 🚀 SAU KHI SUPABASE READY → LOAD APP
 
   const script = document.createElement('script');
+  script.src = 'test.js';
+  //const script = document.createElement('script');
   script.src = 'app.js';
   document.body.appendChild(script);
 </script>
