--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   const script = document.createElement('script');
   script.src = 'test.js';
   //const script = document.createElement('script');
-  script.src = 'app.js';
+  //script.src = 'app.js';
   document.body.appendChild(script);
 </script>
 
