--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
   // 🚀 SAU KHI SUPABASE READY → LOAD APP
 
   const script = document.createElement('script');
-  script.src = 'test.js';
-  //const script = document.createElement('script');
-  //script.src = 'app.js';
+  
+  //script.src = 'test.js';
+  script.src = 'app.js';
+  
   document.body.appendChild(script);
 </script>
 
