--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   const script = document.createElement('script');
   
   //script.src = 'test.js';
-  script.src = 'app.js';
+  //script.src = 'app.js';
+  script.src = 'appp.js';
   
   document.body.appendChild(script);
 </script>
