--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   // 🚀 SAU KHI SUPABASE READY → LOAD APP
 
   const script = document.createElement('script');
-  script.src = 'Tasks.js'; 
-  document.body.appendChild(script);
+  //script.src = 'Tasks.js'; 
+  //document.body.appendChild(script);
   
   script.src = 'test.js';
   //script.src = 'app.js';
