--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
   //script.src = 'Tasks.js'; 
   //document.body.appendChild(script);
   
-  script.src = 'test.js';
+  //script.src = 'test.js';
   //script.src = 'app.js';
   //script.src = 'appp.js';
+
+  // Test db cho user logined success
+  script.src = 'MyTasks.js';
   
   document.body.appendChild(script);
   
