--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!---->
 
 
-<!-- INIT SUPABASE TRƯỚC --
+<!-- INIT SUPABASE TRƯỚC -->
 <script type="module">
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
@@ -58,6 +58,7 @@
 <!---->
 
 
+<!----
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 
 <script>
@@ -83,7 +84,7 @@ window.supabase = createClient(
   
   document.body.appendChild(script);
 </script>
-
+<!---->
 
 </body>
 </html>
