--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
   
   //script.src = 'test.js';
   //script.src = 'app.js';
-  script.src = 'appp.js';
+  //script.src = 'appp.js';
 
   // Test db cho user logined success
-  //script.src = 'MyTasks.js';
+  script.src = 'MyTasks.js';
   
   document.body.appendChild(script);
   
