--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <link rel="stylesheet" href="tasks.css">
 <!---->
 
-<!-- Dùng cho Tasks.js -->
+<!-- Dùng cho MyTasks.js --
 <link rel="stylesheet" href="TasksStyle.css">
 <!---->
+
+<!-- Dùng cho PublicTasks.js -->
+<link rel="stylesheet" href="PublicTasks.css">
+<!---->
+
+
   <style>
 
   </style>
