--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="tasks.css">
 <!---->
 
-<!-- Dùng cho MyTasks.js --
+<!-- Dùng cho MyTasks.js -->
 <link rel="stylesheet" href="TasksStyle.css">
 <!---->
 
