--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <script src="./framework/vdom.js"></script>
 <script src="./framework/hooks.js"></script>
 <script src="./framework/router.js"></script>
+<script src="./framework/init_API.js"></script>
 <!---->
 
 
