--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ window.supabase = createClient(
     const scripts = [
       'Admin.js',         // cần user để test db
       'Products.js',
+      'RenderProducts.js',
       'MyTasks.js'             // routing + UI cuối cùng
     ];
 //      './framework/init_API.js',
