--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ window.supabase = createClient(
       'Admin.js',         // cần user để test db
       'Products.js',
       'RenderProducts.js',
+      'RenderDetailProduct.js',
       'MyTasks.js'             // routing + UI cuối cùng
     ];
 //      './framework/init_API.js',
