--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@ window.supabase = createClient(
     const scripts = [
       'Admin.js',         // cần user để test db
       //'Products.js',
-      'ProductCreate.js',
+      //'ProductCreate.js',
+      'ProductsNew.js'.js,
       'RenderProducts.js',
       'RenderDetailProduct.js',
       'MyTasks.js'             // routing + UI cuối cùng
