--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ window.supabase = createClient(
       'Admin.js',         // cần user để test db
       //'Products.js',
       //'ProductCreate.js',
-      'ProductsNew.js'.js,
+      'ProductsNew.js',
       'RenderProducts.js',
       'RenderDetailProduct.js',
       'MyTasks.js'             // routing + UI cuối cùng
