--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ window.supabase = createClient(
   async function loadScriptsInOrder() {
     const scripts = [
       'Admin.js',         // cần user để test db
-      //'Products.js',
+      'Products.js',
       //'ProductCreate.js',
-      'ProductsNew.js',
+      //'ProductsNew.js',
       'RenderProducts.js',
       'RenderDetailProduct.js',
       'MyTasks.js'             // routing + UI cuối cùng
