--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ window.supabase = createClient(
   async function loadScriptsInOrder() {
     const scripts = [
       'Admin.js',         // cần user để test db
-      'Products.js',
+      //'Products.js',
+      'newProducts.js',
       //'ProductCreate.js',
       //'ProductsNew.js',
       'RenderProducts.js',
