--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <link rel="stylesheet" href="PublicTasks.css">
 <!---->
 
+<!-- Dùng cho RenderProducts.js -->
+<link rel="stylesheet" href="productCard.css">
+<!---->
+
 
   <style>
 
