--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <link rel="stylesheet" href="productCard.css">
 <!---->
 
+<!-- Dùng cho RenderDetailProduct.js -->
+<link rel="stylesheet" href="detailProduct.css">
+<!---->
+
 
   <style>
 
